--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>KAOS OUTING ALRAJA 2024</title>
 <style>
 body {
-  background-color: black;
+  background-color: white;
   text-align: center;
   padding: 40px 0 0 0; 
 }
